--- a/package/extra/etc/grub.d/xen.cfg
+++ b/package/extra/etc/grub.d/xen.cfg
@@ -6,6 +6,18 @@
 
 echo "Including Xen overrides from /etc/default/grub.d/xen.cfg"
 
+. drak-find-xen-defaults
+
+echo "------------------------------------------"
+echo ""
+echo "Resources dedicated to Dom0 (host system):"
+echo "-> CPU core(s): ${DRAK_DOM0_CPU}"
+echo "-> Memory: ${DRAK_DOM0_RAM} MB"
+echo ""
+echo "------------------------------------------"
+
+echo "You can edit these settings in /etc/default/grub.d/xen.cfg"
+
 
 #
 # When running update-grub with the Xen hypervisor installed, there are
@@ -14,7 +26,7 @@ echo "Including Xen overrides from /etc/default/grub.d/xen.cfg"
 
 # The following two are used to generate arguments for the hypervisor:
 #
-GRUB_CMDLINE_XEN_DEFAULT="hap_1gb=false hap_2mb=false dom0_mem=6096M hpet=legacy-replacement iommu=no-sharept"
+GRUB_CMDLINE_XEN_DEFAULT="dom0_mem=${DRAK_DOM0_RAM}M,max:${DRAK_DOM0_RAM}M dom0_max_vcpus=${DRAK_DOM0_CPU} hap_1gb=false hap_2mb=false  hpet=legacy-replacement iommu=no-sharept"
 #GRUB_CMDLINE_XEN=""
 #
 # For example:
