--- a/package/extra/etc/default/grub.d/xen.cfg
+++ b/package/extra/etc/default/grub.d/xen.cfg
@@ -6,7 +6,7 @@
 
 echo "Including Xen overrides from /etc/default/grub.d/xen.cfg"
 
-. drak-find-xen-defaults
+. kfx-find-xen-defaults
 
 echo "------------------------------------------"
 echo ""
