--- a/package/extra/etc/default/grub.d/xen.cfg
+++ b/package/extra/etc/default/grub.d/xen.cfg
@@ -11,8 +11,8 @@ echo "Including Xen overrides from /etc/default/grub.d/xen.cfg"
 echo "------------------------------------------"
 echo ""
 echo "Resources dedicated to Dom0 (host system):"
-echo "-> CPU core(s): ${DRAK_DOM0_CPU}"
-echo "-> Memory: ${DRAK_DOM0_RAM} MB"
+echo "-> CPU core(s): ${KFX_DOM0_CPU}"
+echo "-> Memory: ${KFX_DOM0_RAM} MB"
 echo ""
 echo "------------------------------------------"
 
@@ -26,7 +26,7 @@ echo "You can edit these settings in /etc/default/grub.d/xen.cfg"
 
 # The following two are used to generate arguments for the hypervisor:
 #
-GRUB_CMDLINE_XEN_DEFAULT="dom0_mem=${DRAK_DOM0_RAM}M,max:${DRAK_DOM0_RAM}M dom0_max_vcpus=${DRAK_DOM0_CPU} hap_1gb=false hap_2mb=false  hpet=legacy-replacement iommu=no-sharept"
+GRUB_CMDLINE_XEN_DEFAULT="dom0_mem=${KFX_DOM0_RAM}M,max:${KFX_DOM0_RAM}M dom0_max_vcpus=${KFX_DOM0_CPU} hap_1gb=false hap_2mb=false  hpet=legacy-replacement iommu=no-sharept"
 #GRUB_CMDLINE_XEN=""
 #
 # For example:
