--- a/package/Dockerfile-final
+++ b/package/Dockerfile-final
@@ -1,5 +1,7 @@
 FROM xen-intermediate
 
+ARG IMAGE
+
 COPY . /build
 RUN cd /build/dwarf2json && \
     /usr/local/go/bin/go build
@@ -40,4 +42,4 @@ RUN export INSTALL_PATH="/build/usr" && \
 
 WORKDIR /build
 RUN chmod +x package/mkdeb
-CMD ./package/mkdeb
+CMD ./package/mkdeb $IMAGE
