--- a/package/Dockerfile-final
+++ b/package/Dockerfile-final
@@ -1,6 +1,6 @@
-FROM xen-intermediate
-
 ARG IMAGE
+
+FROM xen-intermediate
 
 COPY . /build
 RUN cd /build/dwarf2json && \
@@ -42,4 +42,4 @@ RUN export INSTALL_PATH="/build/usr" && \
 
 WORKDIR /build
 RUN chmod +x package/mkdeb
-CMD ./package/mkdeb $IMAGE
+CMD ["./package/mkdeb", "$IMAGE"]
