--- a/package/docker/Dockerfile-final
+++ b/package/docker/Dockerfile-final
@@ -1,21 +1,26 @@
 ARG IMAGE
+ARG KFX_DIR
 
 FROM xen-intermediate
 
-COPY . /build
+COPY $KFX_DIR /build
+
 RUN cd /build/dwarf2json && \
     /usr/local/go/bin/go build
-RUN export INSTALL_PATH="/build/usr" && \
-    cd /build/libvmi && \
-    autoreconf -vif && \
+
+ENV INSTALL_PATH=/build/usr
+
+WORKDIR /build/libvmi
+
+RUN autoreconf -vif && \
     ./configure --prefix=$INSTALL_PATH --disable-kvm --disable-bareflank --disable-file && \
     make -j$(nproc) && \
     make install && \
     ldconfig
     
-RUN export INSTALL_PATH="/build/usr" && \
-    cd /build/capstone && \
-    mkdir build && cd build && \
+WORKDIR /build/capstone
+
+RUN mkdir build && cd build && \
     cmake .. && \
     make && \
     make prefix=$INSTALL_PATH install && \
@@ -41,5 +46,6 @@ RUN export INSTALL_PATH="/build/usr" && \
     make  install
 
 WORKDIR /build
-RUN chmod +x package/mkdeb
-CMD ["./package/mkdeb", "$IMAGE"]
+RUN chmod +x package/*.sh
+
+CMD ["./package/mkdeb.sh", "$IMAGE"]
