--- a/package/docker/Dockerfile-xen
+++ b/package/docker/Dockerfile-xen
@@ -4,16 +4,23 @@ FROM $IMAGE
 ENV DEBIAN_FRONTEND=noninteractive
 ENV USER root
 
+RUN apt-get update && apt-get -y install bash
+
 COPY package/depends.sh /tmp/depends.sh
+COPY package/common.sh /tmp/common.sh
 
 # build depends
 RUN mkdir -p /log && \
-    sh /tmp/depends.sh
+    bash /tmp/depends.sh
 
 COPY xen /build-xen
-COPY package/configure-xen.sh /build-xen
-RUN cd /build-xen && \
-    chmod +x configure-xen.sh && \
+
+COPY package/configure-xen.sh /build-xen/configure-xen.sh
+copy package/common.sh /build-xen/common.sh
+
+WORKDIR /build-xen
+
+RUN chmod +x configure-xen.sh && \
     ./configure-xen.sh && \
     echo "Building Xen, this may take a few minutes..." && \
     echo CONFIG_EXPERT=y > xen/.config && \
