--- a/package/scripts/Cargo.toml
+++ b/package/scripts/Cargo.toml
@@ -11,3 +11,6 @@ reqwest = { version = "0.11.13", features = ["blocking"] }
 flate2 = "1.0.25"
 tar = "0.4.38"
 num_cpus = "1.14.0"
+log = "0.4.17"
+simple_logger = "4.0.0"
+walkdir = "2.3.2"
