--- a/package/docker/Dockerfile
+++ b/package/docker/Dockerfile
@@ -7,13 +7,10 @@ ARG IMAGE
 
 FROM $IMAGE AS base
 
-
-# Set with ARG instead of ENV to avoid issues at runtime
 ARG DEBIAN_FRONTEND=noninteractive
 
-# Everything is run as root
 ENV USER root
-
+ENV PATH "/$USER/.cargo/bin:$PATH"
 
 # Install basic dependencies for running the rest of the setup
 # process
@@ -28,40 +25,60 @@ RUN apt-get -y update && apt-get -y install \
 
 # Install rust to run setup scripts
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
-ENV PATH "/$USER/.cargo/bin:$PATH"
 
-COPY . /kfx/
-WORKDIR /kfx/
+COPY . /kfx
+WORKDIR /kfx
+
 RUN git submodule update --init --recursive
 
 # Sanity check that we just copied the correct directory
 RUN grep -q "Tamas K Lengyel" AUTHORS \
     || { echo "docker build run directory not KF/x repo root!"; exit 1; }
 
+
+
+FROM base AS scripts
+
+COPY package /package
+# Export the manifest path for running scripts
+ENV MANIFEST /package/Cargo.toml
 # Speed up cargo registry clone
 ENV CARGO_NET_GIT_FETCH_WITH_CLI true
-# Export the manifest path for running scripts
-ENV MANIFEST /kfx/package/scripts/Cargo.toml
+
+RUN cargo build --release --manifest-path=$MANIFEST
+
+FROM base AS deps
+
+WORKDIR /kfx
+
+COPY --from=scripts /package/target/release/dependencies /scripts/dependencies
 
 # Install dependencies
-RUN cargo run --manifest-path=$MANIFEST --bin dependencies
+RUN /scripts/dependencies
 
-FROM base AS xen-builder
+FROM deps AS xen-builder
+
+WORKDIR /kfx
+
+COPY --from=scripts /package/target/release/xen /scripts/xen
 
 # Build Xen
 RUN cp -a /kfx/xen /xen
 WORKDIR /xen
-RUN cargo run --manifest-path=$MANIFEST --bin xen
+RUN /scripts/xen
 
-FROM base as kfx-builder
+FROM deps AS kfx-builder
 
 ARG KFX_VERSION
+
+WORKDIR /kfx
+
+COPY --from=scripts /package/target/release/kfx /scripts/kfx
 
 # The deb directory is the build directory for the xen deb package, which the kfx
 # package is a superset of
 COPY --from=xen-builder /deb /deb
+COPY --from=xen-builder /out /out
 
 WORKDIR /kfx
-RUN cargo run --manifest-path=$MANIFEST --bin kfx
-
-
+RUN /scripts/kfx
