Restructure as library

--- a/package/Cargo.toml
+++ b/package/Cargo.toml
@@ -14,3 +14,5 @@ num_cpus = "1.14.0"
 log = "0.4.17"
 simple_logger = "4.0.0"
 walkdir = "2.3.2"
+clap = { version = "4.0.29", features = ["derive"] }
+tempdir = "0.3.7"
