--- a/package/docker/Dockerfile
+++ b/package/docker/Dockerfile
@@ -42,43 +42,41 @@ FROM base AS scripts
 COPY package /package
 # Export the manifest path for running scripts
 ENV MANIFEST /package/Cargo.toml
-# Speed up cargo registry clone
-ENV CARGO_NET_GIT_FETCH_WITH_CLI true
 
-RUN cargo build --release --manifest-path=$MANIFEST
+# RUN cargo build --release --manifest-path=$MANIFEST
 
-FROM base AS deps
+# FROM base AS deps
+# 
+# WORKDIR /kfx
+# 
+# COPY --from=scripts /package/target/release/dependencies /scripts/dependencies
+# 
+# # Install dependencies
+# RUN /scripts/dependencies
+# 
+# FROM deps AS xen-builder
+# 
+# WORKDIR /kfx
+# 
+# COPY --from=scripts /package/target/release/xen /scripts/xen
+# 
+# # Build Xen
+# RUN cp -a /kfx/xen /xen
+# WORKDIR /xen
+# RUN /scripts/xen
+# 
+# FROM deps AS kfx-builder
+# 
+# ARG KFX_VERSION
 
-WORKDIR /kfx
-
-COPY --from=scripts /package/target/release/dependencies /scripts/dependencies
-
-# Install dependencies
-RUN /scripts/dependencies
-
-FROM deps AS xen-builder
-
-WORKDIR /kfx
-
-COPY --from=scripts /package/target/release/xen /scripts/xen
-
-# Build Xen
-RUN cp -a /kfx/xen /xen
-WORKDIR /xen
-RUN /scripts/xen
-
-FROM deps AS kfx-builder
-
-ARG KFX_VERSION
-
-WORKDIR /kfx
-
-COPY --from=scripts /package/target/release/kfx /scripts/kfx
-
-# The deb directory is the build directory for the xen deb package, which the kfx
-# package is a superset of
-COPY --from=xen-builder /deb /deb
-COPY --from=xen-builder /out /out
-
-WORKDIR /kfx
-RUN /scripts/kfx
+# WORKDIR /kfx
+# 
+# COPY --from=scripts /package/target/release/kfx /scripts/kfx
+# 
+# # The deb directory is the build directory for the xen deb package, which the kfx
+# # package is a superset of
+# COPY --from=xen-builder /deb /deb
+# COPY --from=xen-builder /out /out
+# 
+# WORKDIR /kfx
+# RUN /scripts/kfx
