Migrating to docker-only approach

--- a/configure.ac
+++ b/configure.ac
@@ -25,7 +25,7 @@ AS_IF([test x"$with_xen" = x"yes"], [
     AC_CHECK_HEADERS([xen/xen.h], [], [AC_MSG_ERROR(xen/xen.h not found. Install missing package and re-run)])
     AC_CHECK_HEADERS([xenstore.h], [], [AC_MSG_ERROR(xenstore.h not found. Install missing package and re-run)])
 
-    AC_CHECK_LIB(xenstore, xs_open, [], [AC_MSG_ERROR([xenstore not found])])
+    dnl AC_CHECK_LIB(xenstore, xs_open, [], [AC_MSG_ERROR([xenstore not found])])
 
     AC_DEFINE([HAVE_XEN], 1, [Have Xen])
 
