Move package script to subdirectory to avoid accidental manual runs

--- a/package/package.yml
+++ b/package/package.yml
@@ -18,6 +18,6 @@ jobs:
       
       - name: Build Package
         run: |
-          package/build.sh ${{ matrix.image }} ${{ github.head_ref }}${{ github.sha }} /debs
+          package/scripts/build.sh ${{ matrix.image }} ${{ github.head_ref }}${{ github.sha }} /debs
 
 
