--- a/package/package.yml
+++ b/package/package.yml
@@ -15,9 +15,20 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 2
+
+      - name: Output Image Codename
+        id: codename
+        run: |
+          echo "codename=$(echo ${{ matrix.image }} | awk -F':' '{print $2}' | head -n 1)" >> $GITHUB_OUTPUT
       
       - name: Build Package
         run: |
-          package/scripts/build.sh ${{ matrix.image }} ${{ github.head_ref }}${{ github.sha }} /debs
+          package/scripts/build.sh ${{ matrix.image }} 0.0.1-git-${{ steps.codename.outputs.codename }} /debs
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: debs-${{ steps.codename.outputs.codename }}
+          path: '/debs/'
+
 
 
