Fix xen.cfg to allow UI during boot for LUKS

--- a/package/resource/xen/etc/default/grub.d/xen.cfg
+++ b/package/resource/xen/etc/default/grub.d/xen.cfg
@@ -4,59 +4,63 @@
 #
 #XEN_OVERRIDE_GRUB_DEFAULT=0
 
-echo "Including Xen overrides from /etc/default/grub.d/xen.cfg"
 
 . kfx-find-xen-defaults
 
 echo "------------------------------------------"
-echo ""
-echo "Resources dedicated to Dom0 (host system):"
-echo "-> CPU core(s): ${KFX_DOM0_CPU}"
-echo "-> Memory: ${KFX_DOM0_RAM} MB"
-echo ""
+echo "!  Configuring GRUB with Xen overrides"
+echo "------------------------------------------"
+# Set the GRUB timeout to 30 seconds. This helps a lot with boot issues and black screens.
+GRUB_TIMEOUT=30
+echo "=> GRUB_TIMEOUT=${GRUB_TIMEOUT} seconds"
+
+# Set the GRUB timeout style to menu. This allows the user to select a different boot option.
+GRUB_TIMEOUT_STYLE=menu
+echo "=> GRUB_TIMEOUT_STYLE=${GRUB_TIMEOUT_STYLE}"
+
+# Set the amount of memory dom0 uses (max prevents balloning for more) and the number of vcpus dom0 uses
+# These values are configured by kfx-find-xen-defaults and default to half of the available memory and half
+# of the available CPU cores.
+GRUB_CMDLINE_XEN_DEFAULT="dom0_mem=${KFX_DOM0_RAM}M,max=${KFX_DOM0_RAM}M dom0_max_vcpus=${KFX_DOM0_CPU}"
+echo "=> dom0 Memory:    ${KFX_DOM0_RAM} MB"
+echo "=> dom0 CPU cores: ${KFX_DOM0_CPU} Cores"
+
+# This disables 1GB and 2MB host page tables for HAP (Hardware Assisted Paging)
+GRUB_CMDLINE_XEN_DEFAULT="${GRUB_CMDLINE_XEN_DEFAULT} hap_1gb=false hap_2mb=false"
+
+# This enables logging of as much information as possible
+GRUB_CMDLINE_XEN_DEFAULT="${GRUB_CMDLINE_XEN_DEFAULT} loglvl=all guest_loglvl=all earlyprintk=xen"
+
+# Enable Intel Branch Trace Store controls
+GRUB_CMDLINE_XEN_DEFAULT="${GRUB_CMDLINE_XEN_DEFAULT} vpmu=bts"
+
+# This disables the use of the HPET (High Precision Event Timer)
+# The HPET will still be used if found, but legacy replacement will be used as a fallback
+GRUB_CMDLINE_XEN_DEFAULT="${GRUB_CMDLINE_XEN_DEFAULT} hpet=legacy-replacement"
+
+# This disables sharing of page tables
+GRUB_CMDLINE_XEN_DEFAULT="${GRUB_CMDLINE_XEN_DEFAULT} iommu=no-sharept"
+
+# This disables speculative execution mitigations for performance
+GRUB_CMDLINE_XEN_DEFAULT="${GRUB_CMDLINE_XEN_DEFAULT} spec-ctrl=0"
+
+# This allows multiple copies of host p2m
+GRUB_CMDLINE_XEN_DEFAULT="${GRUB_CMDLINE_XEN_DEFAULT} altp2m=1"
+
+# This disables the use of PCID processor features
+GRUB_CMDLINE_XEN_DEFAULT="${GRUB_CMDLINE_XEN_DEFAULT} xpti=0"
+echo "=> Xen Options: ${GRUB_CMDLINE_XEN_DEFAULT}"
+
+
+GRUB_CMDLINE_LINUX_XEN_REPLACE_DEFAULT="$GRUB_CMDLINE_LINUX_DEFAULT splash"
+
+echo "=> Linux With Xen Options: ${GRUB_CMDLINE_LINUX_XEN_REPLACE_DEFAULT}"
+
+echo "!  If you need to make changes to these options, "
+echo "!  edit /etc/default/grub.d/xen.cfg then run "
+echo "!  'sudo update-grub' to update the GRUB configuration."
 echo "------------------------------------------"
 
-echo "You can edit these settings in /etc/default/grub.d/xen.cfg"
-
-
-#
-# When running update-grub with the Xen hypervisor installed, there are
-# some additional variables that can be used to pass options to the
-# hypervisor or the dom0 kernel.
-
-# The following two are used to generate arguments for the hypervisor:
-#
-GRUB_CMDLINE_XEN_DEFAULT="dom0_mem=${KFX_DOM0_RAM}M,max:${KFX_DOM0_RAM}M dom0_max_vcpus=${KFX_DOM0_CPU} hap_1gb=false hap_2mb=false  hpet=legacy-replacement iommu=no-sharept"
-#GRUB_CMDLINE_XEN=""
-#
-# For example:
-#
-# dom0_mem=<size>[M]:max=<size>[M]
-#   Sets the amount of memory dom0 uses (max prevents balloning for more)
-# com[12]=<speed>,<data bits><parity><stopbits>
-#   Initialize a serial console from in the hypervisor (eg. 115200,8n1)
-#   Note that com1 would be ttyS0 in Linux.
-# console=<dev>[,<dev> ...]
-#   Redirects Xen hypervisor console (eg. com1,vga)
-
-#
-# The next two lines are used for creating kernel arguments for the dom0
-# kernel. This allows to have different options for the same kernel used
-# natively or as dom0 kernel.
-#
-GRUB_CMDLINE_LINUX_XEN_REPLACE_DEFAULT="$GRUB_CMDLINE_LINUX_DEFAULT quiet splash nomodeset"
-#GRUB_CMDLINE_LINUX_XEN_REPLACE="$GRUB_CMDLINE_LINUX"
-#
-# For example:
-#
-# earlyprintk=xenboot
-#   Allows to send early printk messages to the Xen hypervisor console
-# console=hvc0
-#   Redirects the Linux console to the hypervisor console
-
-#
-# Make booting into Xen the default if not changed above. Finding the
-# current string for it always has been a problem.
 #
 if [ "$XEN_OVERRIDE_GRUB_DEFAULT" = "" ]; then
 	echo "WARNING: GRUB_DEFAULT changed to boot into Xen by default!"
