Rename xenvmm and implement xl wrapper

--- a/xltools/Cargo.toml
+++ b/xltools/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "xenvmm"
+name = "xltools"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,8 +11,10 @@ derive_builder = "0.12.0"
 macaddr = "1.0.1"
 serde_json = "1.0.89"
 serde = { version = "1.0.149", features = ["derive"] }
+log = "0.4.17"
+simple_logger = "4.0.0"
 
-# The following Xen libraries are available:
+# The following Xen libraries are available from Wenzel
 # xenstore-rs
 # xenstore-sys
 # xenforeginmemory
