--- a/xltools/Cargo.toml
+++ b/xltools/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = "1.0.89"
 serde = { version = "1.0.149", features = ["derive"] }
 log = "0.4.17"
 simple_logger = "4.0.0"
+nix = "0.26.1"
 
 # The following Xen libraries are available from Wenzel
 # xenstore-rs
