Fix apt sources

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -31,9 +31,9 @@ jobs:
         # upload-artifact step will use a set env.HTTP_PROXY variable, and will not work, so we
         # can't set that variable for the act runner, only for this step.
         run: |
-          cp /etc/apt/sources.list /etc/apt/sources.list.d/sources-src.list && \
-              sed -i 's|deb http|deb-src http|g' /etc/apt/sources.list.d/sources-src.list
-          apt-get -y update && apt-get -y install \
+          sudo cp /etc/apt/sources.list /etc/apt/sources.list.d/sources-src.list && \
+              sudo sed -i 's|deb http|deb-src http|g' /etc/apt/sources.list.d/sources-src.list
+          sudo apt-get -y update && sudo apt-get -y install \
               apt-transport-https \
               autoconf \
               autoconf-archive \
@@ -76,7 +76,6 @@ jobs:
               libncurses5-dev \
               libpci-dev \
               libpixman-1-dev \
-              # libsdl-dev \
               libsdl1.2-dev \
               libssl-dev \
               libsystemd-dev \
@@ -112,14 +111,14 @@ jobs:
               xz-utils \
               zlib1g-dev
 
-          echo 'APT::Cache-Limit "100000000";' >> /etc/apt/apt.conf.d/70debconf && \
-              echo 'APT::Cache-Start "100000000";' >> /etc/apt/apt.conf.d/70debconf && \
+          echo 'APT::Cache-Limit "100000000";' | sudo tee /etc/apt/apt.conf.d/70debconf && \
+              echo 'APT::Cache-Start "100000000";' | sudo tee -a /etc/apt/apt.conf.d/70debconf && \
               apt-get -y update && apt-get -y build-dep xen
 
-          apt-get -y update && \
-              apt-get -y install gcc-12-plugin-dev gcc-12 g++-12 || \
-              apt-get -y install gcc-10-plugin-dev gcc-10 g++-10 || \
-              apt-get -y install gcc-8-plugin-dev gcc-8 g++-8 || \
+          sudo apt-get -y update && \
+              sudo apt-get -y install gcc-12-plugin-dev gcc-12 g++-12 || \
+              sudo apt-get -y install gcc-10-plugin-dev gcc-10 g++-10 || \
+              sudo apt-get -y install gcc-8-plugin-dev gcc-8 g++-8 || \
               { echo "No gcc plugin dev package found!"; exit 1; }
 
           if grep -q "bionic" /etc/os-release; then \
@@ -131,9 +130,9 @@ jobs:
               chmod +x /tmp/llvm.sh && \
               /tmp/llvm.sh "${LLVM_VERSION}" all
           wget https://go.dev/dl/go1.19.3.linux-amd64.tar.gz && \
-              tar -C /usr/local -xzf go1.19.3.linux-amd64.tar.gz
+              sudo tar -C /usr/local -xzf go1.19.3.linux-amd64.tar.gz
 
-          update-ca-certificates
+          sudo update-ca-certificates
 
       - uses: actions/checkout@v3
         with:
