--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -126,7 +126,7 @@ jobs:
               fi && \
               wget -O /tmp/llvm.sh https://apt.llvm.org/llvm.sh && \
               chmod +x /tmp/llvm.sh && \
-              /tmp/llvm.sh "${LLVM_VERSION}" all
+              sudo /tmp/llvm.sh "${LLVM_VERSION}" all
           wget https://go.dev/dl/go1.19.3.linux-amd64.tar.gz && \
               sudo tar -C /usr/local -xzf go1.19.3.linux-amd64.tar.gz
 
