--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -140,21 +140,20 @@ jobs:
       - name: Build Xen
         shell: bash
         run: |
-            cd xen
-            echo CONFIG_EXPERT=y > xen/.config && \
-                echo CONFIG_MEM_SHARING=y >> xen/.config && \
+            echo CONFIG_EXPERT=y > xen/xen/.config && \
+                echo CONFIG_MEM_SHARING=y >> xen/xen/.config && \
                 ./configure --disable-pvshim --enable-systemd --enable-githttp && \
-                make -C xen olddefconfig && \
-                make -j$(nproc) dist-xen && \
-                make -j$(nproc) dist-tools && \
-                sudo make -j$(nproc) install-xen && \
-                sudo make -j$(nproc) install-tools
+                make -C xen/xen olddefconfig && \
+                make -C xen -j$(nproc) dist-xen && \
+                make -C xen -j$(nproc) dist-tools && \
+                sudo make -C xen -j$(nproc) install-xen && \
+                sudo make -C xen -j$(nproc) install-tools
             mkdir -p dist/install/etc/ld.so.conf.d/ && \
                 echo "/usr/local/lib" > dist/install/etc/ld.so.conf.d/xen.conf
-            cp tools/misc/xen-vmtrace dist/install/usr/local/sbin
+            cp xen/tools/misc/xen-vmtrace dist/install/usr/local/sbin
             mkdir -p /xen-debs/ && \
-                make -j$(nproc) debball && \
-                mv dist/*.deb /xen-debs/
+                make -C xen -j$(nproc) debball && \
+                mv xen/dist/*.deb /xen-debs/
             if [ $(ls -A "/xen-debs/" | wc -l) -eq 0 ]; then \
                 echo "No deb files found in /xen-debs/, Xen build failed!"; \
                 exit 1; \
